tests/compile-fail/shared_pointer_arc_of_non_send_nor_sync_is_not_send_nor_sync.rs
use archery::*;
use std::rc::Rc;
use static_assertions::assert_impl_all;

assert_impl_all!(SharedPointer<Rc<i32>, ArcK>: Send);
//~^ ERROR cannot be sent between threads safely
//~^^ ERROR cannot be shared between threads safely

assert_impl_all!(SharedPointer<Rc<i32>, ArcK>: Sync);
//~^ ERROR cannot be sent between threads safely
//~^^ ERROR cannot be shared between threads safely

fn main() {}
